
    Other methods--accepted.args(), accepted.keys(), etc.--remain
    unchanged.

* Changed validation to generate Deviation objects for a broader
  definition of quantitative values (like datetime objects)--not
  just for subclasses of numbers.Number.
* Changed handling for pandas.Series objects to treat them as
  sequences instead of mappings.
* Removed acceptance classes from datatest namespace--these were
  inadvertently added in a previous version but were never part
  of the documented API. They can still be referenced via the
  `acceptances` module::

    from datatest.acceptances import ...


2019-05-01 (0.9.5)
------------------

* Changed difference objects to make them hashable (can now be defined
  as members of a set or used as dictionary keys).
* Added __slots__ to difference objects to reduce memory consumption.
* Changed name of Selector class to Select ("Selector" is now deprecated).
* Changed language and class names from "allowed & allowance" to
  "accepted & acceptance" to bring datatest more inline with
  manufacturing and engineering terminology. The existing "allowed"
  API is now deprecated.


2019-04-21 (0.9.4)
------------------

* Added Python 3.8 testing and support.
* Added new validate methods (moved from how-to recipes into core module):

  * Added approx() method to require for approximate numeric equality.
  * Added fuzzy() method to require strings by approximate match.
  * Added interval() method to require elements within a given interval.
  * Added set(), subset(), and superset() methods for explicit membership
    checking.
  * Added unique() method to require unique elements.
  * Added order() method to require elements by relative order.

* Changed default sequence validation to check elements by index position
  rather than checking by relative order.
* Added fuzzy-matching allowance to allow strings by approximate match.
* Added Predicate class to formalize behavior--also provides inverse-matching